--- a/source/index.html
+++ b/source/index.html
@@ -18,7 +18,7 @@
         <span class="dropdown-menu__button dropdown-menu__button--close" type="button">Close</span>
       </button>
       <button class="header__button">White theme</button>
-      <ul class="header__list">
+      <ul class="header__list header__list--open">
         <li class="header__item"><a class="header__link">Project</a></li>
         <li class="header__item"><a class="header__link">About</a></li>
         <li class="header__item"><a class="header__link">Blog</a></li>
