--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       </div>
     </nav>
   </header>
-  <main>
+  <main class="index-main">
     <section class="intro">
       <h1 class="intro__title">nice to meet you</h1>
       <img class="intro__photo" src="../img/photo.jpg" alt="">
