--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <header class="header">
     <nav class="header__nav">
       <a class="header__logo" title="shouny">Shouny</a>
-      <button class="main-nav__toggle" type="button">
+      <button class="header__toggle" type="button">
         <span class="dropdown-menu__button dropdown-menu__button--open" type="button">Navigation</span>
         <span class="dropdown-menu__button dropdown-menu__button--close" type="button">Close</span>
       </button>
