--- a/source/index.html
+++ b/source/index.html
@@ -13,11 +13,11 @@
   <header class="header">
     <nav class="header__nav">
       <a class="header__logo" title="shouny">Shouny</a>
-      <button class="header__toggle" type="button">
-        <span class="dropdown-menu__button dropdown-menu__button--open" type="button">Navigation</span>
-        <span class="dropdown-menu__button dropdown-menu__button--close" type="button">Close</span>
+      <button class="header__button" type="button">
+        <span class="header__button-span header__button-span--nav">Navigation</span>
+        <span class="header__button-span header__button-span--close">Close</span>
       </button>
-      <button class="header__button">White theme</button>
+      <button class="header__button-theme">White theme</button>
       <div class="header__wrap-list">
         <ul class="header__list">
           <li class="header__item"><a class="header__link">Project</a></li>
@@ -28,6 +28,7 @@
     </nav>
   </header>
   <main class="index-main">
+    <div>
     <section class="intro">
       <h1 class="intro__title">nice to meet you</h1>
       <img class="intro__photo" src="../img/photo.jpg" alt="">
@@ -68,6 +69,7 @@
         </li>
       </ul>
     </section>
+  </div>
   </main>
   <footer>
 
