--- a/source/index.html
+++ b/source/index.html
@@ -17,25 +17,32 @@
         <span class="header__button-span header__button-span--nav">Navigation</span>
         <span class="header__button-span header__button-span--close">Close</span>
       </button>
-      <button class="header__button-theme">White theme</button>
       <div class="header__wrap-list">
+        <button class="header__button-theme" type="button">White theme</button>
         <ul class="header__list">
+          <li class="header__item"><a class="header__link">Home</a></li>
           <li class="header__item"><a class="header__link">Project</a></li>
           <li class="header__item"><a class="header__link">About</a></li>
           <li class="header__item"><a class="header__link">Blog</a></li>
+        </ul>
+        <ul class="header__list">
+          <li class="header__item"><a href="" class="header__link">Instagram</a></li>
+          <li class="header__item"><a href="" class="header__link">Github</a></li>
+          <li class="header__item">
+            <button class="header__link-button" type="button">Get in touch</button>
+          </li>
         </ul>
       </div>
     </nav>
   </header>
   <main class="index-main">
-    <div>
     <section class="intro">
       <h1 class="intro__title">nice to meet you</h1>
       <img class="intro__photo" src="../img/photo.jpg" alt="">
-      <p class="intro__desc">I’m Sergey. Front End Developer, Student. My goal is to develop cross-browser sites based on specification, new techniques, performance, preprocessors and automation.</p>
+      <p class="intro__desc">I’m Sergey. Front-End Developer and Student. Developing web interfaces at professional level, based on the specification, new techniques and technologies, productivity, preprocessors and automation.</p>
     </section>
     <section class="skills">
-      <h2 class="skills__title">My Skills</h2>
+      <h2 class="skills__title">Skills</h2>
       <ul class="skills__list">
         <li class="skills__item">
           <p class="skills__desc">Javascript ES6</p>
@@ -53,23 +60,22 @@
           <p class="skills__desc">Git</p>
         </li>
         <li class="skills__item">
+          <p class="skills__desc">Gulp and Webpack</p>
+        </li>
+        <li class="skills__item">
           <p class="skills__desc">BEM methodology</p>
         </li>
         <li class="skills__item">
           <p class="skills__desc">Сross-browsing</p>
         </li>
         <li class="skills__item">
-          <p class="skills__desc"></p>
-        </li>
-        <li class="skills__item">
-          <p class="skills__desc"></p>
+          <p class="skills__desc">Self-menagement</p>
         </li>
         <li class="skills__item">
           <p class="skills__desc"></p>
         </li>
       </ul>
     </section>
-  </div>
   </main>
   <footer>
 
