start page redesign and font download

--- a/source/index.html
+++ b/source/index.html
@@ -33,9 +33,7 @@
           <ul class="header__list header__list--two-list">
             <li class="header__item"><a href="" class="header__link">Instagram</a></li>
             <li class="header__item"><a href="" class="header__link">Github</a></li>
-            <li class="header__item">
-              <button class="header__link-button" type="button">Get in touch</button>
-            </li>
+            <li class="header__item"><a class="header__link" href="mailto:shooouun@gmail.com?subject=site" target="_blank">Get in touch</a></li>
           </ul>
         </li>
       </ul>
@@ -43,7 +41,7 @@
   </header>
   <main class="index-main">
     <section class="intro">
-      <h1 class="intro__title">nice to meet you</h1>
+      <h1 class="intro__title">Sergey Kolgaev</h1>
       <img class="intro__photo" src="../img/photo.jpg" alt="">
       <p class="intro__desc">I’m Sergey. Front-End Developer and Student. Developing web interfaces at professional level, based on the specification, new techniques and technologies, productivity, preprocessors and automation.</p>
     </section>
