--- a/source/index.html
+++ b/source/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>shouny</title>
+  <title>Shouny</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Lusitana:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/style.min.css">
   <meta name="keywords" content="bookmarksу">
@@ -12,7 +12,7 @@
 <body class="index-page">
   <header class="header">
     <nav class="header__nav" aria-label="Основное меню">
-      <a class="header__logo" title="shouny">Shouny</a>
+      <a class="header__logo" href="index.html" title="shouny">Shouny</a>
       <button class="header__button" type="button">
         <span class="header__button-span header__button-span--nav">Navigation</span>
         <span class="header__button-span header__button-span--close">Close</span>
@@ -24,16 +24,31 @@
         <li class="header__item-main">
           <ul class="header__list header__list--one-list">
             <li class="header__item"><a class="header__link">Home</a></li>
-            <li class="header__item"><a class="header__link">Project</a></li>
-            <li class="header__item"><a class="header__link">About</a></li>
-            <li class="header__item"><a class="header__link">Blog</a></li>
+            <li class="header__item"><a class="header__link" href="index.html">Project</a></li>
+            <li class="header__item"><a class="header__link" href="index.html">About</a></li>
+            <li class="header__item"><a class="header__link" href="index.html">Blog</a></li>
           </ul>
         </li>
         <li class="header__item-main">
           <ul class="header__list header__list--two-list">
-            <li class="header__item"><a href="" class="header__link">Instagram</a></li>
-            <li class="header__item"><a href="" class="header__link">Github</a></li>
-            <li class="header__item"><a class="header__link" href="mailto:shooouun@gmail.com?subject=site" target="_blank">Get in touch</a></li>
+            <li class="header__item">
+              <a href="" class="header__link">Instagram</a>
+              <svg class="header__icon" width="14" height="13" viewBox="0 0 14 13" xmlns="http://www.w3.org/2000/svg">
+                <path fill-rule="evenodd" clip-rule="evenodd" d="M10.5605 8.16138L10.4644 2.70958L5.01259 2.8057L5.03394 4.01721L8.17452 3.96184L3.03107 9.28989L4.15192 10.3719L9.29368 5.04559L9.34899 8.18274L10.5605 8.16138Z"/>
+              </svg>
+            </li>
+            <li class="header__item">
+              <a href="" class="header__link">Github</a>
+              <svg class="header__icon" width="14" height="13" viewBox="0 0 14 13" xmlns="http://www.w3.org/2000/svg">
+                <path fill-rule="evenodd" clip-rule="evenodd" d="M10.5605 8.16138L10.4644 2.70958L5.01259 2.8057L5.03394 4.01721L8.17452 3.96184L3.03107 9.28989L4.15192 10.3719L9.29368 5.04559L9.34899 8.18274L10.5605 8.16138Z"/>
+              </svg>
+            </li>
+            <li class="header__item">
+              <a class="header__link" href="mailto:shooouun@gmail.com?subject=site" target="_blank">Get in touch</a>
+              <svg class="header__icon" width="14" height="13" viewBox="0 0 14 13" xmlns="http://www.w3.org/2000/svg">
+                <path fill-rule="evenodd" clip-rule="evenodd" d="M10.5605 8.16138L10.4644 2.70958L5.01259 2.8057L5.03394 4.01721L8.17452 3.96184L3.03107 9.28989L4.15192 10.3719L9.29368 5.04559L9.34899 8.18274L10.5605 8.16138Z"/>
+              </svg>
+            </li>
           </ul>
         </li>
       </ul>
@@ -42,8 +57,8 @@
   <main class="index-main">
     <section class="intro">
       <h1 class="intro__title">Sergey Kolgaev</h1>
-      <img class="intro__photo" src="../img/photo.jpg" alt="">
       <p class="intro__desc">I’m Sergey. Front-End Developer and Student. Developing web interfaces at professional level, based on the specification, new techniques and technologies, productivity, preprocessors and automation.</p>
+      <img class="intro__photo" src="../img/photo.jpg" width="360px" height="210px" alt="photo profile">
     </section>
     <section class="skills">
       <h2 class="skills__title">Skills</h2>
