--- a/source/index.html
+++ b/source/index.html
@@ -10,6 +10,9 @@
   <meta name="description" content="bookmarks">
 </head>
 <body class="index-page">
+  <div class="background">
+    <h1 class="background__title">Shouny</h1>
+  </div>
   <header class="header">
     <nav class="header__nav" aria-label="Основное меню">
       <a class="header__logo" href="index.html" title="shouny">Shouny</a>
@@ -32,13 +35,13 @@
         <li class="header__item-main">
           <ul class="header__list header__list--two-list">
             <li class="header__item">
-              <a href="" class="header__link">Instagram</a>
+              <a href="https://www.instagram.com/heyrenn/" target="_blank" class="header__link">Instagram</a>
               <svg class="header__icon" width="14" height="13" viewBox="0 0 14 13" xmlns="http://www.w3.org/2000/svg">
                 <path fill-rule="evenodd" clip-rule="evenodd" d="M10.5605 8.16138L10.4644 2.70958L5.01259 2.8057L5.03394 4.01721L8.17452 3.96184L3.03107 9.28989L4.15192 10.3719L9.29368 5.04559L9.34899 8.18274L10.5605 8.16138Z"/>
               </svg>
             </li>
             <li class="header__item">
-              <a href="" class="header__link">Github</a>
+              <a href="https://github.com/Shooouuun" target="_blank" class="header__link">Github</a>
               <svg class="header__icon" width="14" height="13" viewBox="0 0 14 13" xmlns="http://www.w3.org/2000/svg">
                 <path fill-rule="evenodd" clip-rule="evenodd" d="M10.5605 8.16138L10.4644 2.70958L5.01259 2.8057L5.03394 4.01721L8.17452 3.96184L3.03107 9.28989L4.15192 10.3719L9.29368 5.04559L9.34899 8.18274L10.5605 8.16138Z"/>
               </svg>
