--- a/source/index.html
+++ b/source/index.html
@@ -14,7 +14,7 @@
     <h1 class="background__title">Shouny</h1>
   </div>
   <header class="header">
-    <nav class="header__nav" aria-label="Основное меню">
+    <nav class="header__nav" aria-label="main navigation">
       <a class="header__logo" href="index.html" title="shouny">Shouny</a>
       <button class="header__button" type="button">
         <span class="header__button-span header__button-span--nav">Navigation</span>
