--- a/index.html
+++ b/index.html
@@ -10,9 +10,6 @@
   <meta name="description" content="bookmarks">
 </head>
 <body class="index-page">
-  <div class="background">
-    <h1 class="background__title">Shouny</h1>
-  </div>
   <header class="header">
     <nav class="header__nav" aria-label="main navigation">
       <a class="header__logo" href="index.html" title="shouny">Shouny</a>
@@ -60,7 +57,8 @@
   <main class="index-main">
     <section class="intro">
       <h1 class="intro__title">Sergey Kolgaev</h1>
-      <p class="intro__desc">I’m Sergey. Front-End Developer and Student. Developing web interfaces at professional level, based on the specification, new techniques and technologies, productivity, preprocessors and automation.</p>
+      <p class="intro__desc">just a few informations about who am I</p>
+      <p class="intro__text">I’m Sergey. Front-End Developer and Student. Developing web interfaces at professional level, based on the specification, new techniques and technologies, productivity, preprocessors and automation.</p>
       <img class="intro__photo" src="../img/photo.jpg" width="360px" height="210px" alt="photo profile">
     </section>
     <section class="skills">
