--- a/source/index.html
+++ b/source/index.html
@@ -60,7 +60,8 @@
   <main class="index-main">
     <section class="intro">
       <h1 class="intro__title">Sergey Kolgaev</h1>
-      <p class="intro__desc">I’m Sergey. Front-End Developer and Student. Developing web interfaces at professional level, based on the specification, new techniques and technologies, productivity, preprocessors and automation.</p>
+      <p class="intro__desc">just a few informations about who am I</p>
+      <p class="intro__text">Front-End Developer and Student. Developing web interfaces at professional level, based on the specification, new techniques and technologies, productivity, preprocessors and automation.</p>
       <img class="intro__photo" src="../img/photo.jpg" width="360px" height="210px" alt="photo profile">
     </section>
     <section class="skills">
@@ -79,9 +80,6 @@
           <p class="skills__desc">LESS & SASS</p>
         </li>
         <li class="skills__item">
-          <p class="skills__desc">Git</p>
-        </li>
-        <li class="skills__item">
           <p class="skills__desc">Gulp and Webpack</p>
         </li>
         <li class="skills__item">
@@ -94,7 +92,7 @@
           <p class="skills__desc">Self-menagement</p>
         </li>
         <li class="skills__item">
-          <p class="skills__desc"></p>
+          <p class="skills__desc">Git</p>
         </li>
       </ul>
     </section>
